force-app/main/default/objects/Expense/fields/Doctor_Physician__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor/ Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>