force-app/main/default/objects/Expense/fields/Hospital_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital/ Clinic</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>