force-app/main/default/objects/Expense/listViews/All_Expenses.listView-meta.xml
<ListView>
    <fullName>All_Expenses</fullName>
    <columns>Title</columns>
    <columns>Name</columns>
    <columns>ExpenseType</columns>
    <columns>Amount</columns>
    <columns>TransactionDate</columns>
    <columns>Description</columns>
    <columns>ExpenseStartDate</columns>
    <columns>ExpenseEndDate</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <label>All Expenses</label>
</ListView>